GrpcGreeter/OShift/grpc-greeter-template.yml
---
kind: DeploymentConfig
apiVersion: v1
metadata:
  name: grpc-greetings
  labels:
    deploymentConfig: grpc-greetings
    app: test-grpc
spec:
  replicas: 2
  selector:
    deploymentConfig: grpc-greetings
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 120
      maxUnavailable: "10%"
  template:
    metadata:
      labels:
        deploymentConfig: grpc-greetings
        app: test-grpc
      name: grpc-greetings
    spec:
      containers:
      - name: grpc-greetings
        image: grpc-greetings:0.1
        imagePullPolicy: Always
        ports: 
        - name: grpc
          containerPort: 5001
      restartPolicy: Always
      dnsPolicy: ClusterFirst
  triggers:
  - type: ImageChange
    imageChangeParams:
      automatic: true
      containerNames:
      - grpc-greetings
      from:
        kind: ImageStreamTag
        name: grpc-greetings:0.1

---
kind: Service
apiVersion: v1
metadata:
  name: grpc-greetings
  labels:
    app: test-grpc
spec:
  clusterIP: None
  ports:
  - name: grpc
    port: 5001
    targetPort: 5001
  selector:
    deploymentConfig: grpc-greetings
